index.css
/* -------------------- */
/* Custom Properties    */
/* -------------------- */

:root {
    /* colors */
    --clr-dark: 230 35% 7%;
    --clr-light: 231 77% 90%;
    --clr-white: 0 0% 100%;
    
    /* font-sizes */
    --fs-900: clamp(5rem, 8vw + 1rem, 9.375rem);
    --fs-800: 3.5rem;
    --fs-700: 1.5rem;
    --fs-600: 1rem;
    --fs-500: 1rem;
    --fs-400: 0.9375rem;
    --fs-300: 1rem;
    --fs-200: 0.875rem;
    
    /* font-families */
    --ff-serif: "Bellefair", serif;
    --ff-sans-cond: "Barlow Condensed", sans-serif;
    --ff-sans-normal: "Barlow", sans-serif;
}

@media (min-width: 35em) {
    :root {
        --fs-800: 5rem;
        --fs-700: 2.5rem;
        --fs-600: 1.5rem;
        --fs-500: 1.25rem;
        --fs-400: 1rem;
    }
}

@media (min-width: 45em) {
    :root {
        /* font-sizes */
        --fs-800: 6.25rem;
        --fs-700: 3.5rem;
        --fs-600: 2rem;
        --fs-500: 1.75rem;
        --fs-400: 1.125rem;
    }
}

/* -------------------- */
/* Reset                */
/* -------------------- */


/* Box sizing */

*,
*::before,
*::after {
    box-sizing: border-box;
}

/* Reset margins */

body,
h1,
h2,
h3,
h4,
h5,
p,
figure,
picture {
    margin: 0;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
    font-weight: 400;
}

/* Set up the body */

body {
    font-family: var(--ff-sans-normal);
    font-size: var(--fs-400);
    color: hsl( var(--clr-white) );
    background-color: hsl( var(--clr-dark) );
    line-height: 1.5;
    min-height: 100vh;
    
    display: grid;
    grid-template-rows: min-content 1fr;
    
    overflow-x: hidden;
}

/* Make images easier to work with */

img,
picture {
    max-width: 100%;
    display: block;
}

/* Make form elements easier to work with */

input,
button,
textarea,
select {
    font: inherit;
}

/* Remove animations for people who turn them off */

@media (prefers-reduced-motion: reduce) {
    *,
    *::before,
    *::after {
        animation-duration: 0.01ms !important;
        animation-iteration-count: 1 !important;
        transition-duration: 0.01ms !important;
        scroll-behavior: auto !important;
    }
}

/* -------------------- */
/* Utility Classes      */
/* -------------------- */

/* General */

.flex {
    display: flex;
    gap: var(--gap, 1rem);
}

.grid {
    display: grid;
    gap: var(--gap, 1rem);
}

.block {
    display: block;
}

.flow > *:where(:not(:first-child)) {
    margin-top: var(--flow-space, 1rem);
    /* outline: 1px solid red; */
}

.container {
    padding-inline: 2em;
    margin-inline: auto;
    max-width: 80rem;
}

.grid-container {
    display: grid;
    text-align: center;
    place-items: center;
    padding-inline: 1rem;
}

.grid-container * {
    max-width: 50ch;
}

.divider {
    width: 100%; 
    border-bottom: hsl( var(--clr-white) / .25 ) solid 2px; 
    margin: var(--dvider-gap, 2em) auto;
}

@media (min-width: 60em) {
    .grid-container {
        text-align: left;
        column-gap: var(--container-gap, 2rem);
        grid-template-columns: minmax(2em, 1fr) repeat(2, minmax(0, 30rem)) minmax(2em, 1fr);
    }

    .grid-container > *:first-child {
        grid-column: 2;
    }
    
    .grid-container > *:last-child {
        grid-column: 3;
    }

    .grid-container--home {
        padding-bottom: 6rem;
        align-items: end;
    }
}

.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap; /* added line */
    border: 0;
}

.skip-to-content {
    position: absolute;
    z-index: 9999;
    background: hsl( var(--clr-white) );
    color: hsl( var(--clr-dark) );
    padding: .5em 1em;
    transform: translateY(-100%);
    transition: transform 250ms ease-in;
}

.skip-to-content:focus {
    transform: translateY(0);
}

.box {
    background-color: lightblue;
    padding: 3rem;
}

.color-box {
    background-color: var(--clr-box-clr, hsl( var(--clr-light) ));
    padding: 3rem 1rem 1rem;
    border: solid 1px hsl( var(--clr-white) );
}

/* Colors */

.bg-dark { background-color: hsl( var(--clr-dark) ); }
.bg-light { background-color: hsl( var(--clr-light) ); }
.bg-white { background-color: hsl( var(--clr-white) ); }

.txt-dark { color: hsl( var(--clr-dark) ); }
.txt-light { color: hsl( var(--clr-light) ); }
.txt-white { color: hsl( var(--clr-white) ); }

.example-component {
    background-color: hsl( var(--clr-light) / 0.2 );
}

/* Typography */

.ff-serif { font-family: var(--ff-serif); } 
.ff-sans-cond { font-family: var(--ff-sans-cond); } 
.ff-sans-normal { font-family: var(--ff-sans-normal); } 

.letter-spacing-1 { letter-spacing: 4.75px; } 
.letter-spacing-2 { letter-spacing: 2.7px; } 
.letter-spacing-3 { letter-spacing: 2.35px; } 

.uppercase { text-transform: uppercase; }

.fs-900 { font-size: var(--fs-900); }
.fs-800 { font-size: var(--fs-800); }
.fs-700 { font-size: var(--fs-700); }
.fs-600 { font-size: var(--fs-600); }
.fs-500 { font-size: var(--fs-500); }
.fs-400 { font-size: var(--fs-400); }
.fs-300 { font-size: var(--fs-300); }
.fs-200 { font-size: var(--fs-200); }

.fs-900,
.fs-800,
.fs-700,
.fs-600 {
    line-height: 1.1;
}

.numbered-title {
    font-family: var(--ff-sans-cond);
    font-size: var(--fs-500);
    text-transform: uppercase;
    letter-spacing: 4.72px;
}

.numbered-title span {
    margin-right: 0.5em;
    font-weight: 700;
    color: hsl( var(--clr-white) / 0.25 );
}

/* -------------------- */
/* Components           */
/* -------------------- */

.large-button {
    font-size: 2rem;
    position: relative;
    display: inline-grid;
    place-items: center;
    z-index: 1;
    padding: 0 2em;
    aspect-ratio: 1;
    border-radius: 50%;
    text-decoration: none;
}
/* ... */

